DT-2533: Migrate Ontology data use matching logic to Consent (#2809)
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>